[package]
name = "filecoin-miner"
version = "0.1.0"
authors = ["paulwang001 <12900985@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "*"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.0.1"
lazy_static = "*"
bincode = "1.3.3"
base64 = "0.13"

[dependencies.filecoin-proofs-api]
#package = "filecoin-proofs-api"
version = "5.4.1"
default-features = false
path="../rust-filecoin-proofs-api"
